--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,48 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet');
+
+
 *{
   margin: 0;
   padding: 0;
+  font-family: 'Poppins', sans-serif;
 }
 
 .TodosOsProdutos{
   display: grid;
-  grid-template:  auto / auto auto auto;
-  margin-top: 50px;
+  grid-template: 1fr / 1fr 1fr;
+  margin-top: 10px;
+
 }
+
+.PrimeiraLinha{
+  display: grid;
+  grid-template: 1fr 1fr / 1fr 1fr 1fr;
+  grid-gap: 100px;
+
+}
+
+.Filtros {
+  position: relative;
+  width: 20vw;
+  height: 100%;
+  border: 2px solid black;
+} 
+
+img{
+  height: 200px;
+}
+
+#botaoAdicionar{
+  background-color: gray;
+  width: 200px;
+  font-size: 16px;
+  font-style: white;
+  text-align: center;
+  text-decoration: white;
+
+}
+
+button{
+  color: violet
+}
+
